@@ -1,3 +1,8 @@
+2003-05-05  Michael Hanni   <michael@deviant-behavior.com>
+
+	* Source/NSTabView.m: implemented 
+	selectTabViewItemWithIdentifier:.
+
 2003-05-05 22:48  Alexander Malmberg <alexander@malmberg.org>
 
 	* Headers/gnustep/gui/GSLayoutManager.h, Source/GSLayoutManager.m,
